--- a/anth-project/index.html
+++ b/anth-project/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>anth-project</title>
+    <script src="https://cdn.jsdelivr.net/gh/linways/table-to-excel@v1.0.4/dist/tableToExcel.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="dkm"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
